Agregar secciones de carga y héroe, y eliminar componente de bienvenida

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,28 @@
 ---
-import Welcome from "../components/Welcome.astro";
+import ChargeSection from "../components/ChargeSection.astro";
+import HeroSection from "../components/HeroSection.astro";
+import LandingHeader from "../components/LandingHeader.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-  <Welcome />
+  <LandingHeader />
+
+  <main
+    class="snap-y snap-mandatory relative w-full h-screen overflow-auto scroll-snap-type-y"
+  >
+    <div class="snap-center">
+      <HeroSection />
+    </div>
+    <div class="snap-center">
+      <ChargeSection />
+    </div>
+    <div class="snap-center">
+      <HeroSection />
+    </div>
+    <div class="snap-center">
+      <ChargeSection />
+    </div>
+  </main>
 </Layout>
