--- a/src/components/ChargeSection.astro
+++ b/src/components/ChargeSection.astro
@@ -1,5 +1,7 @@
 ---
 import Section from "./Section.astro";
+
+const BASE_URL = import.meta.env.BASE_URL;
 ---
 
 <Section
@@ -23,7 +25,7 @@ import Section from "./Section.astro";
   </div>
   <img
     slot="background"
-    src="/model-y.webp"
+    src={`${BASE_URL}/model-y.webp`}
     alt="Model Y"
     class="h-full w-full object-cover"
   />
