--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,7 +1,5 @@
 ---
 import Section from "./Section.astro";
-
-const BASE_URL = import.meta.env.BASE_URL;
 ---
 
 <Section
@@ -23,5 +21,5 @@ const BASE_URL = import.meta.env.BASE_URL;
     autoplay
     muted
     loop
-    src={`${BASE_URL}/public_video.webm`}></video>
+    src="/public_video.webm"></video>
 </Section>
